# Garagebook

./: .gitignore  CLAUDE.md  Garagebook.bat  Garagebook.command  Garagebook.sh  INSTALACJA.txt  INSTRUKCJA.md  README.md  main.py  pyproject.toml  requirements.txt  start.sh
db/: database.py  schema.sql
dev/: build_dist.py
scripts/linux/: install.sh
scripts/macos/: install.sh
scripts/windows/: install.bat
ui/: dashboard.py  documents.py  entries.py  export.py  layout.py  settings.py  vehicles.py
